--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
             kipe: live:.cid.6aabcb6d73b30d2c <br>
             Correo: libardoalarcon96@gmail.com</p>
     </h4>
+        <nav>
+            <h3>Face 1</h3>
+        </nav>
 </body>
 </html>
