--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             kipe: live:.cid.6aabcb6d73b30d2c <br>
             Correo: libardoalarcon96@gmail.com</p>
     </h4>
-        <nav>
-            <h3>Face 1</h3>
-        </nav>
+        <ul>
+            <li><a href="paginas/design.html">face 2</a></li>
+        </ul>
 </body>
 </html>
