--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>datos de contacto del estudiante </p>
         <p>Celular: 3204321933 <br>
             kipe: live:.cid.6aabcb6d73b30d2c <br>
-            Correo: libardoalarcon96@gmail.com</p>
+            Correo: libardoalarcon96@gmail.com.</p>
     </h4>
         <ul>
             <li><a href="paginas/design.html">face 2</a></li>
