--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+        <a href="">face 2</a>
+    </ul>
     <div>
         <h1>ESCUELA DE SISTEMAS</h1>
     </div>
