--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <a href="">index</a>
+        <a href="paginas/design.html">index</a>
     </ul>
     <div>
         <h1>ESCUELA DE SISTEMAS</h1>
