--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <h4>
         <p>Fecha de creación: septiembre 2 del 2021 </p>
         <p>datos de contacto del estudiante </p>
-        <p>Celular: 3204321933. <br>
+        <p>Celular: 3204321933 <br>
             kipe: live:.cid.6aabcb6d73b30d2c <br>
             Correo: libardoalarcon96@gmail.com</p>
     </h4>
         <ul>
-            <li><a href="">index</a></li>
+            <li><a href="paginas/design.html">fase 2</a></li>
         </ul>
 </body>
 </html>
