--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -10,7 +10,7 @@
     <ul>
         <a href="../index.html">inicio</a>
     </ul>
-
+   <link rel="stylesheet" href="estilos.css">
    <h1>ESCUELA DE SISTEMAS</h1>
     
     
