--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <ul>
         <a href="../index.html">inicio</a>
     </ul>
-   <link rel="stylesheet" href="estilos.css">
-   <h1>ESCUELA DE SISTEMAS</h1>
+   <div> class="contenedor">
+    <h1>ESCUELA DE SISTEMAS</h1>
+
+   </div>
+   
     
     
 </body>
