--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aprende mas escuela de sistemas</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
     </ul>
 
     <h1>ESCUELA DE SISTEMAS</h1>
+    <h2>Aprende es mas facíl</h2>
    
    
     
