--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -11,9 +11,9 @@
     <ul>
         <a href="../index.html">inicio</a>
     </ul>
-
-    <h1>ESCUELA DE SISTEMAS</h1>
-    <h2>Aprende es mas facíl</h2>
+<header>ESCUELA DE SISTEMAS</header>
+    <h2>Aprende es mas fácil</h2>
+    <h4></h4>
    
    
     
