--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -9,11 +9,17 @@
 </head>
 <body>
     <ul>
-        <a href="../index.html">inicio</a>
+        <li><a href="../index.html">inicio</a></li>
     </ul>
 <header>ESCUELA DE SISTEMAS</header>
     <h2>Aprende es mas fácil</h2>
-    <h4></h4>
+    <nav>
+        <ul>
+         <li><a href="">Recursos digitales</a></li>
+         <li><a href="">Aprendizaje</a></li>
+         <li><a href="">Acerca de</a></li>
+        </ul>
+    </nav>
    
    
     
