--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -12,7 +12,6 @@
         <li><a href="../index.html">inicio</a></li>
     </ul>
 <header>ESCUELA DE SISTEMAS</header>
-    <h2>Aprende es mas fácil</h2>
     <nav>
         <ul>
          <li><a href="">Recursos digitales</a>
@@ -34,7 +33,7 @@
             </li>
         </ul>
     </nav>
-   
+   <section>Hola mundo....</section>
    
     
     
