--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -33,7 +33,7 @@
             </li>
         </ul>
     </nav>
-   <section>Hola mundo....</section>
+   <section>Hojas de estilo cascada Css: Nos ayuda a dar una mejor presentación de pagina, podemos dar al sitio web los diseños que nosotros queramos (en el tipo de letra, el color) esto solo con utilizar css que se codifica muy aparte de el html.</section>
    
     
     
