--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -34,7 +34,7 @@
         </ul>
     </nav>
    <section>Hojas de estilo cascada Css: Nos ayuda a dar una mejor presentación de pagina, podemos dar al sitio web los diseños que nosotros queramos como el tipo de letra, diferntes colores para cada parrafo esto solo con utilizar css que se codifica muy aparte de el html por lo que lo hace muy eficas ya que podemos tener una persona cadificando y otra en diseño.</section>
-   <section></section>
+   <section>Frameworks:</section>
    <section>Refencias tomadas para la investigación: Marcelo P (2012) http://repositorio.uta.edu.ec/bitstream/123456789/7146/1/Esp.DAW.1636.pdf</section>
     
     
