--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="../index.html">inicio</a></li>
+        <li><a href="../index.html">Inicio</a></li>
     </ul>
 <header>ESCUELA DE SISTEMAS</header>
     <nav>
@@ -33,6 +33,7 @@
             </li>
         </ul>
     </nav>
+    <section>ESTUDIANTE 5:</section>
    <section>Hojas de estilo cascada Css: Nos ayuda a dar una mejor presentación de pagina, podemos dar al sitio web los diseños que nosotros queramos como el tipo de letra, diferntes colores para cada parrafo esto solo con utilizar css que se codifica muy aparte de el html por lo que lo hace muy eficas ya que podemos tener una persona cadificando y otra en diseño.</section>
    <section>Frameworks: cuando utilizamos un framework lo utilizamos para que a la pagina web que estamos creando lo podamos implementar codigo mas complejo como es el de orientación a objetos, asi le podremos implementar una sin fin de opciones.</section>
    <section>Refencias tomadas para la investigación: Marcelo P (2012) http://repositorio.uta.edu.ec/bitstream/123456789/7146/1/Esp.DAW.1636.pdf</section>
