--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             Correo: libardoalarcon96@gmail.com</p>
     </h4>
         <ul>
-            <li><a href="Face 2/design.html">face 2</a></li>
+            <li><a href="Face 2/design.html">Face 2</a></li>
         </ul>
 </body>
 </html>
