--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -38,7 +38,8 @@
    <section>Frameworks: cuando utilizamos un framework lo utilizamos para que a la pagina web que estamos creando le podamos implementar codigo mas complejo como es el de orientación a objetos, asi le podremos implementar una sin fin de opciones.</section>
    <section>Refencias tomadas para la investigación: Marcelo P (2012) http://repositorio.uta.edu.ec/bitstream/123456789/7146/1/Esp.DAW.1636.pdf</section>
     <section>Referencias tomadas para la investigación: Villalobos M (2010) https://www.redalyc.org/pdf/849/84917316032.pdf</section>
-    <footer>Skype:live:.cid.6aabcb6d73b30d2c</footer>
-    <footer>Fecha:08/09/2021</footer>
+    <footer>Skype:live:.cid.6aabcb6d73b30d2c <p>
+        Fecha:08/09/2021
+    </p></footer>
 </body>
 </html>
