--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <ul>
-        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="../index.html">Volver</a></li>
     </ul>
 <header>ESCUELA DE SISTEMAS</header>
     <nav>
         <ul>
+            <li><a href="">Inicio</a></li>
          <li><a href="">Recursos digitales</a>
              <ul>
                     <li><a href="">Recurso 1</a></li>
