--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
             kipe: live:.cid.6aabcb6d73b30d2c <br>
             Correo: libardoalarcon96@gmail.com</p>
     </h4>
-        <ul>
-            <li><a href="Face 2/design.html">Face 2</a></li>
-        </ul>
+       <nav>
+           <ul>
+               <li><a href="Face 2/design.html">Face 2</a></li>
+           </ul>
+       </nav>
 </body>
 </html>
