--- a/Face 2/design.html
+++ b/Face 2/design.html
@@ -40,11 +40,14 @@
        <img src="imagenes/cascada.png" alt="" width="300" height="300">
        <p>Frameworks: cuando utilizamos un framework lo utilizamos para que a la pagina web que estamos creando le podamos implementar codigo mas complejo como es el de orientación a objetos, asi le podremos implementar una sin fin de opciones.</p>
        <img src="imagenes/framework.jpg" alt="" width="300" height="300">
+       <p>Mochup</p>
+       <img src="imgenes/Machup.png" alt="" width="400" height="400">
         <p>Refencias tomadas para la investigación: Marcelo P (2012) http://repositorio.uta.edu.ec/bitstream/123456789/7146/1/Esp.DAW.1636.pdf</p>
         <p>Referencias tomadas para la investigación: Villalobos M (2010) https://www.redalyc.org/pdf/849/84917316032.pdf</p>
   </section>
 
-    <footer>Skype:live:.cid.6aabcb6d73b30d2c 
+    <footer>libardoalarcon96@gmail.com
+        <p>Skype:live:.cid.6aabcb6d73b30d2c</p> 
         <p>Fecha:08/09/2021 </p>
     </footer>
 </body>
