--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1> Proyecto del sitio web 2021-16-04 </h1>
     <h1>Nomdre: Libardo Alarcón</h1>
-    <h3>Programa: ing de sistemas</h3>
+    <h3>Programa: ingenieria de sistemas</h3>
     <h4>
         <p>Fecha de creación: septiembre 2 del 2021 </p>
         <p>datos de contacto del estudiante </p>
