--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
      <h3>Fases del proyecto</h3>
        <ol>
         <li><a href="Fase 2/design.html"><strong>Fase 2</strong></a></li> 
+        <li><a href="fase 3/index.html"><strong>Fase 3</strong></a></li>
        </ol>
        
            
