--- a/fase 3/index.html
+++ b/fase 3/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>implementación de estilo</title>
+    <title>Pagina principal</title>
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="css/estiloss.css">
+    <link rel="icon" href="img/Logo.ico">
 </head>
 <body>
     <header>
@@ -54,7 +56,7 @@
                 </article>
                 <article>
                     <h1>Frameworks CSS</h1>
-                    <p>El consepto para Frameworks no es mas que una herramienta que funciona para ágilizar un proyecto de software, esto se ha tenido que implementar por la gran de manda de desarrollo de software lo cual con este tipo de herramientas nos facilita el trabajo donde la creación de un framework nos ayuda a que el software sea mas ágil y productivo, cuando hablamos de framework CSS hablamos de un aplicatvo que hace mas rentable y eficiente el CSS. para un mayor concepto de framework CSS en el tema 2 encontrara mas sobre esto.</p>
+                    <p>El concepto para Frameworks no es mas que una herramienta que funciona para ágilizar un proyecto de software, esto se ha tenido que implementar por la gran de manda de desarrollo de software lo cual con este tipo de herramientas nos facilita el trabajo donde la creación de un framework nos ayuda a que el software sea mas ágil y productivo, cuando hablamos de framework CSS hablamos de un aplicatvo que hace mas rentable y eficiente el CSS. para un mayor concepto de framework CSS en el tema 2 encontrara mas sobre esto.</p>
                     <br>
                     <img src="img/framework.jpg" alt="cascada" height="300" width="300">
                 </article>
