--- a/fase 3/recurso1.html
+++ b/fase 3/recurso1.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>implementación de estilo</title>
+    <title>Recurso 1</title>
     <link rel="stylesheet" href="css/estiloss.css">
+    <link rel="icon" href="img/Logo.ico">
 </head>
 <body>
     <header>
-        <h1 class="titulo">CONSEPTOS BASICOS PARA CREAR MI PAGINA WEB </h1>
+        <h1 class="titulo">CONCEPTOS BASICOS PARA CREAR MI PAGINA WEB </h1>
     </header>
     <nav class="navegacion">
         <ul class="menu">
@@ -49,7 +50,7 @@
                 <article>
                     <h1 class="titulo1">Hojas de estilo en cascada CSS</h1>
                     <br>
-                    <p>Video complementario de el consepto de hojas de estilo CSS</p>
+                    <p>Video complementario de el concepto de hojas de estilo CSS</p>
                     <br>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/CX2ZrvsEA7E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <br>
