--- a/fase 3/recurso2.html
+++ b/fase 3/recurso2.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>implementación de estilo</title>
+    <title>Recurso 2</title>
     <link rel="stylesheet" href="css/estiloss.css">
+    <link rel="icon" href="img/Logo.ico">
 </head>
 <body>
     <header>
-        <h1 class="titulo">CONSEPTOS BASICOS PARA CREAR MI PAGINA WEB </h1>
+        <h1 class="titulo">CONCEPTOS BASICOS PARA CREAR MI PAGINA WEB </h1>
     </header>
     <nav class="navegacion">
         <ul class="menu">
@@ -49,7 +50,7 @@
                 <article>
                     <h1 class="titulo1">Frameworks CSS</h1>
                     <br>
-                    <p>Video complementario de el consepto de Framework CSS</p>
+                    <p>Video complementario de el concepto de Framework CSS</p>
                     <br>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/gQWvZXeq62Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <br>
@@ -57,7 +58,7 @@
                     
                 </article>
             </section>
-            <aside class="tipoc">La pagina es creada con la idea de dejar claro los conseptos de el diseño en hojas de estilo CSS y Frameworks CSS donde lo podra consultar en los link que especifican cada uno de estos conceptos. <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe> </aside>
+            <aside class="tipoc">La pagina es creada con la idea de dejar claro los conceptos de el diseño en hojas de estilo CSS y Frameworks CSS donde lo podra consultar en los link que especifican cada uno de estos conceptos. <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe> </aside>
     </main>
     <footer>
         <p>Bibliografía: Nube-2018 colectiva link https://blog.nubecolectiva.com/que-es-un-framework-historia-y-mas-detalles/ </p>
