--- a/fase 3/autor.html
+++ b/fase 3/autor.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>implementación de estilo</title>
+    <title>Datos del autor</title>
     <link rel="stylesheet" href="css/estiloss.css">
+    <link rel="icon" href="img/Logo.ico">
 </head>
 <body>
     <header>
-        <h1 class="titulo">CONSEPTOS BASICOS PARA CREAR MI PAGINA WEB </h1>
+        <h1 class="titulo">CONCEPTOS BASICOS PARA CREAR MI PAGINA WEB </h1>
     </header>
     <nav class="navegacion">
         <ul class="menu">
@@ -54,7 +55,7 @@
                    <p>Correo electronico: libardoalarcon96@gmail.com</p>
                    <p>Usuario Skype:  live:.cid.6aabcb6d73b30d2c</p>
                    <br>
-                   <img src="img/foto.jpg" alt="cascada" width="300" height="300">
+                   <img src="img/Autor.jpg" alt="Autor" width="300" height="300">
                 </article>
             </section>
             <aside class="tipoc">La pagina es creada con la idea de dejar claro los conseptos de el diseño en hojas de estilo CSS y Frameworks CSS donde lo podra consultar en los link que especifican cada uno de estos conceptos. <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FUniversidadUNAD%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe> </aside>
