--- a/fase 3/index.html
+++ b/fase 3/index.html
@@ -15,7 +15,7 @@
     </header>
     <nav class="navegacion">
         <ul class="menu">
-            <li><a href="">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
 
          <li> <a href="">Temas</a>
              <ul class="submenu">
