--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
        <ol>
         <li><a href="Fase 2/design.html"><strong>Fase 2</strong></a></li> 
         <li><a href="fase 3/index.html"><strong>Fase 3</strong></a></li>
+        <li> <a href="fase 4/index.html"><strong>Fase 4</strong></a></li>
        </ol>
        
            
